# playscript-autoscroller

./: .pylintrc  README.rst  roadmap.rst  setup.cfg
.circleci/: config.yml
debian/: changelog  control  copyright  gbp.conf  playscript-autoscroller.install  python3-playscript-autoscroller.install  rules
playscript_autoscroller/: __init__.py  application.py  file_io.py  main.py  midi_devices.py  midi_runner.py  outline_tree_model.py  pdf.py  schema.py
playscript_autoscroller/ui/: about_dialog.py  action_classes.py  controller.py  device_selector.py  main_text.py  main_toolbar.py  main_window.py  midi_config.py  outline_tree_view.py  palette_icon_engine.py  pdf_view.py  toolbar_action.py
playscript_autoscroller/ui/icons/: sources.txt
playscript_autoscroller/ui/menus/: about_menu.py  file_menu.py  heading_submenu.py  import_menu.py
playscript_autoscroller/ui/pdf/: dummy_pdf_view.py  poppler_pdf_view.py  qt6_pdf_view.py
script_scroller/: __init__.py  application.py  main.py  midi_devices.py  midi_runner.py  outline_tree_model.py  schema.py
script_scroller/ui/: about_dialog.py  controller.py  device_selector.py  main_text.py  main_text_toolbar.py  main_toolbar.py  main_window.py  midi_config.py  outline_tree_view.py  palette_icon_engine.py  toolbar_action.py
script_scroller/ui/icons/: sources.txt
script_scroller/ui/menus/: about_menu.py  file_menu.py
