[metadata]
name = playscript_autoscroller
author = s0600204
description = attr: playscript-autoscroller.__doc__
long_description = file: README.rst
keywords = stage-script, theatre

# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning

    Intended Audience :: End Users/Desktop

    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio :: MIDI

    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)

    Environment :: X11 Applications :: Qt

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    appdirs
    mido
    PyQt5
    PyQt5-rst
    python-rtmidi
    qdarkstyle
    strictyaml

[options.entry_points]
console_scripts =
    playscript-autoscroller = playscript_autoscroller.main:main
